objects/LicenseIntegrationSetting__c.object
<CustomObject><fields>
        <fullName>LicenseLimitPage__c</fullName>
        <description>License LimitPage Size</description>
        <label>LicenseLimitPage</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>LicenseMWUrl__c</fullName>
        <description>Contains License Base Url for Mathworks</description>
        <label>LicenseMWUrl</label>
        <type>Url</type>
    </fields><fields>
        <fullName>LimitSizeOfProduct__c</fullName>
        <description>Limit Size Of Product for Licenses</description>
        <label>LimitSizeOfProduct</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PageSizeForPaginationToShowLicenses__c</fullName>
        <description>This will be used to set page size for License showing on view License page</description>
        <label>PageSizeForPaginationToShowLicenses</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>URLForNonProfLicensesAccount__c</fullName>
        <description>URL to open new Non Prof License Application. Searches by CDS Acccount Id passed with URL only PASS, Home use, or student licenses</description>
        <inlineHelpText>Non professional licenses search</inlineHelpText>
        <label>URLForNonProfLicensesAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>URLForNonProfLicenses__c</fullName>
        <description>URL to open Non professional license application - Home, PASS, Student licenses</description>
        <inlineHelpText>URL to new MW License App</inlineHelpText>
        <label>URLForNonProfLicenses</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>UrlForShowingLicenses__c</fullName>
        <label>UrlForShowingLicenses</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>UrlForShowingMasterLicense__c</fullName>
        <description>pass master license id from Opportunity to search license app by master license id</description>
        <inlineHelpText>Open License App URL by Opportunity Master License Id</inlineHelpText>
        <label>UrlForShowingMasterLicense</label>
        <length>250</length>
        <type>Text</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><description>Contains integration setting related to the  license</description><enableFeeds>false</enableFeeds><label>License Integration Setting</label><visibility>Protected</visibility></CustomObject>